# pokemon_test

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/api/: settings.py  urls.py
api/pokemon/: models.py  serializers.py  views.py
api/pokemon/management/commands/: get_data.py
api/pokemon/migrations/: 0001_initial.py  0002_auto_20201116_2150.py  0003_auto_20201117_1235.py
api/users/migrations/: 0001_initial.py
frontend/: .gitignore  package.json  tailwind.config.js
frontend/src/: App.js
frontend/src/components/: Navbar.js  PokemonCard.js  SearchFilters.js
frontend/src/services/: pokeapi.js
